--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -8,6 +8,10 @@
   &__wrapper {
     position: relative;
     padding-bottom: 15px;
+
+    &_sm-pb {
+      padding-bottom: 13px;
+    }
   }
 
   &__cell {
