--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -18,6 +18,7 @@ include ../blocks/characteristics-table/characteristics-table
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
 include ../blocks/conversation-info/conversation-info
+include ../blocks/dialog/dialog
 include ../blocks/divider/divider
 include ../blocks/dropdown/dropdown
 include ../blocks/facility/facility
@@ -102,4 +103,4 @@ include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/ui-kit/ui-kit
-include ../components/user-menu-panel/user-menu-panel
+include ../components/user-menu-panel/user-menu-panel
