--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -97,6 +97,8 @@ $color-news-hover-text: #0a0d11;
 $color-pagination-disabled: #ccd2d9;
 $color-radio-dark-hover: #2c3542;
 $color-fb: #4a6790;
+$color-chat-placeholder: #c3c8cf;
+$color-timestamp: #babfc6;
 
 // ##########
 // Transitions
