--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -1,3 +1,71 @@
 .bubble {
   $b: &;
+
+  position: relative;
+  display: inline-block;
+  max-width: 576px;
+  box-sizing: border-box;
+  background-color: $color-white;
+  border-radius: 3px;
+  padding: 21px 18px;
+  cursor: pointer;
+
+  &__angle {
+    position: absolute;
+    top: -6px;
+    left: 0;
+    width: 11px;
+    height: 9px;
+    fill: $color-white;
+  }
+
+  &__timestamp {
+    @include text12;
+
+    line-height: 1;
+    font-weight: 400;
+    position: absolute;
+    left: 100%;
+    top: .1em;
+    display: inline-block;
+    color: $color-timestamp;
+    padding: 0 7px;
+    transition: opacity $ease-main;
+    opacity: 0;
+
+    #{$b}:hover & {
+      opacity: 1;
+    }
+  }
+
+  &__content {
+    @include text16;
+
+    display: inline-block;
+    line-height: (20/16);
+
+    @include screen('sm') {
+      @include text;
+
+      line-height: (20/14);
+    }
+  }
+
+  &_dark {
+    background-color: $color-basic;
+    color: $color-white;
+
+    #{$b} {
+
+      &__angle {
+        top: auto;
+        bottom: -6px;
+        fill: $color-basic;
+      }
+    }
+  }
+
+  &_bold {
+    font-weight: 700;
+  }
 }
