conversation page full

--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -42,4 +42,26 @@
       }
     }
   }
+
+  &__icon {
+
+    &_check {
+      width: 11px;
+      height: 11px;
+      color: currentColor;
+      margin-right: 4px;
+    }
+  }
+
+  &_big.table {
+    @include text16;
+
+    line-height: (38/16);
+
+    @include screen('sm') {
+      @include text;
+
+      line-height: (38/14);
+    }
+  }
 }
