--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -150,6 +150,34 @@
     }
   }
 
+  &__head {
+    @include text15;
+
+    line-height: (30/15);
+    font-weight: 700;
+    text-transform: uppercase;
+    display: block;
+    width: 100%;
+    text-align: center;
+    color: $color-white;
+
+    &_orange {
+      background-color: $color-hot-desk;
+    }
+
+    &_red {
+      background-color: $color-dedicated-desk;
+    }
+
+    &_blue {
+      background-color: $color-meeting-room;
+    }
+
+    &_green {
+      background-color: $color-office-space;
+    }
+  }
+
   &_around {
     #{$b}__boxes {
       min-height: 9px;
