--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -148,6 +148,26 @@
           margin-bottom: 12px;
         }
       }
+
+      #{$b}_reverse#{$b}_mid-pad & {
+        @include screen('lg') {
+          margin-bottom: 60px;
+        }
+
+        @include screen('sm') {
+          margin-bottom: 30px;
+        }
+      }
+
+      #{$b}_wide-lg#{$b}_mid-pad & {
+        @include screen('md') {
+          margin-bottom: 60px;
+        }
+
+        @include screen('sm') {
+          margin-bottom: 30px;
+        }
+      }
     }
 
     &_ptop {
