--- a/app/blocks/bubble/bubble.scss
+++ b/app/blocks/bubble/bubble.scss
@@ -10,6 +10,10 @@
   padding: 21px 18px;
   cursor: pointer;
 
+  @include screen('sm') {
+    max-width: 100%;
+  }
+
   &__angle {
     position: absolute;
     top: -6px;
@@ -33,6 +37,19 @@
     transition: opacity $ease-main;
     opacity: 0;
 
+    @include screen('md') {
+      opacity: 1;
+    }
+
+    @include screen('sm') {
+      left: auto;
+      right: 0;
+      top: auto;
+      bottom: 100%;
+      line-height: 1.2;
+      padding: 0;
+    }
+
     #{$b}:hover & {
       opacity: 1;
     }
@@ -43,6 +60,7 @@
 
     display: inline-block;
     line-height: (20/16);
+    width: 100%;
 
     @include screen('sm') {
       @include text;
