--- a/app/blocks/space-reservation/space-reservation.pug
+++ b/app/blocks/space-reservation/space-reservation.pug
@@ -1,3 +1,14 @@
-mixin space-reservation()
-  +b.space-reservation&attributes(attributes)
+mixin space-reservation(tag)
+  +b(tag || 'ARTICLE').space-reservation&attributes(attributes)
+    block
+
+mixin space-reservation-info(data)
+  +space-reserv('section', data).__info
+
+mixin space-reservation-table
+  +characteristics-table._big.__table&attributes(attributes)
+    block
+
+mixin space-reservation-controls
+  +e.controls&attributes(attributes)
     block
