--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -18,6 +18,10 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
+    @include screen('md') {
+      flex-wrap: wrap;
+    }
   }
 
   &__name {
