fixes for conversation and update ui-kit

--- a/app/blocks/characteristics-table/characteristics-table.scss
+++ b/app/blocks/characteristics-table/characteristics-table.scss
@@ -1,6 +1,8 @@
 .characteristics-table {
   $b: &;
 
+  width: 100%;
+
   &.table {
     @include text;
 
@@ -62,6 +64,17 @@
       @include text;
 
       line-height: (38/14);
+    }
+  }
+
+  &_normal.table {
+    font-weight: 400;
+
+    #{$b}__cell {
+
+      &_dark {
+        font-weight: 700;
+      }
     }
   }
 }
