--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -203,6 +203,11 @@
       display: inline-flex;
       align-items: center;
     }
+
+    .indicator {
+      align-self: flex-start;
+      margin-top: 4px;
+    }
   }
 
   .breadcrumbs {
