--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -18,7 +18,7 @@ block content
         +link(href="blog-article.html") Blog article (blog-article.html)
         +link(href="favourites.html") Favourites (Tablet & Desktop Ready, Mobile NOT READY) (favourites.html)
         +link(href="messages.html") Messages (messages.html)
-        +link(href="conversation.html") Messages One Conversation IN PROGRESS (conversation.html)
+        +link(href="conversation.html") Messages One Conversation (conversation.html)
 
       +page-title._small Попапы
       +e.list
