reservation history page

--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -61,6 +61,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
   }
 
+  &_reserv {
+    margin-top: -60px;
+  }
+
   &_no-top {
     margin-top: 0;
   }
@@ -140,6 +144,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       @include screen('sm') {
         padding-top: 60px;
       }
+    }
+
+    #{$b}_reserv & {
+      padding-top: 60px;
     }
 
     #{$b}_no-top & {
