--- a/app/components/side-navigation/side-navigation.scss
+++ b/app/components/side-navigation/side-navigation.scss
@@ -9,6 +9,10 @@
   min-height: 585px;
   box-sizing: border-box;
 
+  .is-IE & {
+    height: 585px;
+  }
+
   @include screen('xl') {
     padding-left: 12%;
     padding-right: 12%;
@@ -17,7 +21,7 @@
   &__navigation {
 
     &:not(:last-child) {
-      margin-bottom: 106px;
+      margin-bottom: 50px;
     }
   }
 
