--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -19,6 +19,7 @@ block content
         +link(href="favourites.html") Favourites (Tablet & Desktop Ready, Mobile NOT READY) (favourites.html)
         +link(href="messages.html") Messages (messages.html)
         +link(href="conversation.html") Messages One Conversation (conversation.html)
+        +link(href="reservation-history.html") Reservation History IN PROGRESS (reservation-history.html)
 
       +page-title._small Попапы
       +e.list
