start host reservations page

--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -73,6 +73,14 @@
       }
     }
 
+    &_ssmg {
+      margin-bottom: 56px;
+
+      @include screen('sm') {
+        margin-bottom: 44px;
+      }
+    }
+
     &:last-child {
       margin-bottom: 0;
     }
@@ -310,6 +318,11 @@
       @include screen('sm') {
         margin-bottom: 16px;
       }
+    }
+
+    &_smg,
+    #{$b}_inner &_smg {
+      margin-bottom: 16px;
     }
 
     &-content {
