--- a/app/blocks/space-reservation/space-reservation.scss
+++ b/app/blocks/space-reservation/space-reservation.scss
@@ -105,6 +105,13 @@
       opacity: 0;
       transition: opacity $ease-main;
       z-index: 1;
+
+      @include screen('md') {
+        top: -20px;
+        left: -20px;
+        right: -20px;
+        bottom: -40px;
+      }
     }
 
     &:hover::before {
