--- a/app/blocks/table-head/table-head.scss
+++ b/app/blocks/table-head/table-head.scss
@@ -71,6 +71,17 @@
         &_messages {
           flex: 1;
         }
+
+        &_req-sub {
+          width: 55.8%;
+          padding-right: 25px;
+        }
+
+        &_req-info {
+          flex: 1;
+          padding-right: 25px;
+          padding-left: 25px;
+        }
       }
     }
   }
