--- a/app/components/ui-kit/ui-kit.scss
+++ b/app/components/ui-kit/ui-kit.scss
@@ -228,8 +228,13 @@ $ui-kit-color-darkbg: #111;
     }
 
     &_gradient {
+
       &_main {
         @include gradient-main;
+      }
+
+      &_second {
+        @include gradient-second;
       }
     }
   }
