--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -40,6 +40,7 @@ include ../blocks/info-price/info-price
 include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
+include ../blocks/long-arrow/long-arrow
 include ../blocks/map/map
 include ../blocks/message-form/message-form
 include ../blocks/message/message
@@ -60,6 +61,9 @@ include ../blocks/panel/panel
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
+include ../blocks/request-info/request-info
+include ../blocks/request-status/request-status
+include ../blocks/request/request
 include ../blocks/scroll-form/scroll-form
 include ../blocks/section/section
 include ../blocks/short-profile/short-profile
@@ -78,6 +82,7 @@ include ../blocks/table-head/table-head
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
+include ../blocks/time/time
 include ../blocks/tip/tip
 include ../blocks/transport-table/transport-table
 include ../blocks/transport-type/transport-type
@@ -103,4 +108,4 @@ include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/ui-kit/ui-kit
-include ../components/user-menu-panel/user-menu-panel
+include ../components/user-menu-panel/user-menu-panel
