--- a/app/styles/helpers/_gradients.scss
+++ b/app/styles/helpers/_gradients.scss
@@ -1,3 +1,7 @@
 @mixin gradient-main {
-  background: linear-gradient(to left, $color-gradient-one 0%, $color-gradient-two 100%);
+  background-image: linear-gradient(to left, $color-gradient-one 0%, $color-gradient-two 100%);
+}
+
+@mixin gradient-second {
+  background-image: linear-gradient(to left, $color-gradient-red1 0%, $color-gradient-red2 100%);
 }
