--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -99,6 +99,14 @@ $color-radio-dark-hover: #2c3542;
 $color-fb: #4a6790;
 $color-chat-placeholder: #c3c8cf;
 $color-timestamp: #babfc6;
+$color-status-wait: #dfa831;
+$color-status-wait-dark: #b8864a;
+$color-status-accept: #44b59c;
+$color-status-accept-dark: #437c6f;
+$color-status-decline: #e4695c;
+$color-status-decline-dark: #5e2e2e;
+$color-gradient-red1: #ba4d42;
+$color-gradient-red2: #e66a5e;
 
 // ##########
 // Transitions
