--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -371,4 +371,8 @@
       }
     }
   }
+
+  &_red {
+    background-image: linear-gradient(to left, $color-gradient-red1 0%, $color-gradient-red2 100%);
+  }
 }
