--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -19,7 +19,8 @@ block content
         +link(href="favourites.html") Favourites (Tablet & Desktop Ready, Mobile NOT READY) (favourites.html)
         +link(href="messages.html") Messages (messages.html)
         +link(href="conversation.html") Messages One Conversation (conversation.html)
-        +link(href="reservation-history.html") Reservation History IN PROGRESS (reservation-history.html)
+        +link(href="reservation-history.html") Reservation History (reservation-history.html)
+        +link(href="host-reservations.html") HOST reservations IN PROGRESS (host-reservations.html)
 
       +page-title._small Попапы
       +e.list
