full host reservations page

--- a/app/blocks/indicator/indicator.scss
+++ b/app/blocks/indicator/indicator.scss
@@ -12,4 +12,20 @@
   color: $color-white;
   text-align: center;
   margin-left: 9px;
+
+  &_fz13 {
+    font-size: 13px;
+  }
+
+  &_orange {
+    background-color: $color-hot-desk;
+  }
+
+  &_green {
+    background-color: $color-office-space;
+  }
+
+  &_blue {
+    background-color: $color-meeting-room;
+  }
 }
