--- a/app/blocks/space-description/space-description.pug
+++ b/app/blocks/space-description/space-description.pug
@@ -14,6 +14,14 @@ mixin space-description-address()
   +e.address&attributes(attributes)
     block
 
+mixin space-description-info()
+  +e.info&attributes(attributes)
+    block
+
+mixin space-description-text()
+  +e.text&attributes(attributes)
+    block
+
 mixin space-description-title(tag)
   +e(tag || 'h4').title&attributes(attributes)
     block
