--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -22,6 +22,7 @@ include ../blocks/dialog/dialog
 include ../blocks/divider/divider
 include ../blocks/dropdown/dropdown
 include ../blocks/facility/facility
+include ../blocks/factor/factor
 include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
@@ -47,6 +48,7 @@ include ../blocks/message/message
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/note/note
+include ../blocks/offer-counters/offer-counters
 include ../blocks/offer-info/offer-info
 include ../blocks/offer-item/offer-item
 include ../blocks/offer-list/offer-list
@@ -59,6 +61,7 @@ include ../blocks/page/page
 include ../blocks/pagination/pagination
 include ../blocks/panel/panel
 include ../blocks/popups/popups
+include ../blocks/price/price
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
 include ../blocks/request-info/request-info
