--- a/app/pages/host-reservations/host-reservations.pug
+++ b/app/pages/host-reservations/host-reservations.pug
@@ -24,19 +24,18 @@ block content
                     +e.name Request for
                   +e.cell_req-info
                     +e.name Request Details and Status
-                  +divider
-              +request-full('x4', '2', '', 'buttons')
-              +request-full('x4', '2', '', 'wait')
+              +request-full('4', '2', '730', 'buttons')
+              +request-full('4', '2', '730', 'wait')
           +section._inner._inner_gmg
             +section-header._flex._smg
               +section-title('h3') Upcoming
             +section-content
-              +request-full('x1', '1', '', 'buttons')
-              +request-full('x3', '2', '', 'buttons')
-              +request-full('x4', '2', '', 'accept')
-              +request-full('x4', '2', '', 'decline')
-              +request-full('x2', '2', '', 'accept')
-              +request-full('x1', '2', '', 'accept')
+              +request-full('1', '1', '455', 'buttons')
+              +request-full('3', '2', '730', 'buttons')
+              +request-full('4', '2', '730', 'accept')
+              +request-full('4', '2', '730', 'decline')
+              +request-full('2', '2', '730', 'accept')
+              +request-full('1', '2', '730', 'accept')
           +pagination._negative-mgt
 
 block panels
