--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -20,7 +20,7 @@ block content
         +link(href="messages.html") Messages (messages.html)
         +link(href="conversation.html") Messages One Conversation (conversation.html)
         +link(href="reservation-history.html") Reservation History (reservation-history.html)
-        +link(href="host-reservations.html") HOST reservations IN PROGRESS (host-reservations.html)
+        +link(href="host-reservations.html") HOST reservations (host-reservations.html)
 
       +page-title._small Попапы
       +e.list
