--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -107,6 +107,7 @@ $color-status-decline: #e4695c;
 $color-status-decline-dark: #5e2e2e;
 $color-gradient-red1: #ba4d42;
 $color-gradient-red2: #e66a5e;
+$color-factor: #c0c5ca;
 
 // ##########
 // Transitions
