--- a/app/blocks/request-info/request-info.scss
+++ b/app/blocks/request-info/request-info.scss
@@ -1,7 +1,8 @@
 .request-info {
   $b: &;
 
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
 
   &__renter {
@@ -17,6 +18,10 @@
     box-sizing: border-box;
     padding: 0 4px;
 
+    @include screen('sm') {
+      padding: 0;
+    }
+
     &:not(:last-child) {
       margin-bottom: 24px;
     }
@@ -26,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     width: 100%;
     margin-top: auto;
   }
@@ -33,8 +39,18 @@
   &__button {
     flex: 1;
 
+    @include screen('md') {
+      width: 100%;
+      flex: none;
+    }
+
     &:not(:last-child) {
       margin-right: 30px;
+
+      @include screen('md') {
+        margin-right: 0;
+        margin-bottom: 10px;
+      }
     }
   }
 
