--- a/app/blocks/request/request.scss
+++ b/app/blocks/request/request.scss
@@ -5,7 +5,15 @@
   display: flex;
   margin: 0 -25px;
   box-sizing: border-box;
-  padding: 32px 0 40px;
+  padding: 33px 0 40px;
+
+  @include screen('sm') {
+    flex-wrap: wrap;
+  }
+
+  &:not(:first-child) {
+    margin-top: -1px;
+  }
 
   &::after {
     @include pseudo;
@@ -17,7 +25,7 @@
     background-color: $color-border-light;
   }
 
-  &:first-child::before {
+  &::before {
     @include pseudo;
 
     top: 0;
@@ -34,6 +42,15 @@
     padding: 0 25px;
     width: 55.5%;
 
+    @include screen('md') {
+      width: 45%;
+    }
+
+    @include screen('sm') {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
     &::before {
       @include pseudo;
 
@@ -43,12 +60,23 @@
       top: 0;
       background-color: $color-border-light;
     }
+
+    .space-description {
+      margin-left: -12px;
+      margin-right: -12px;
+      width: calc(100% + 24px);
+    }
   }
 
   &__info {
-    display: block;
+    display: flex;
     box-sizing: border-box;
     padding: 0 25px;
     flex: 1;
+
+    @include screen('sm') {
+      flex: none;
+      width: 100%;
+    }
   }
 }
